// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should display correct configuration for barchart 1`] = `
<Fragment>
  <SharedChartConfig
    configuration={
      Object {
        "color": "#1991c8",
        "hideAbsoluteValue": false,
        "hideRelativeValue": false,
        "pointMarkers": true,
        "showInstanceCount": false,
        "targetValue": null,
        "xLabel": "",
        "yLabel": "",
      }
    }
    hideTooltipOptions={false}
    report={
      Object {
        "data": Object {
          "reportIds": Array [
            "test1",
          ],
        },
        "result": Object {
          "test1": Object {
            "data": Object {
              "view": Object {
                "property": "frequency",
              },
              "visualization": "bar",
            },
          },
        },
      }
    }
  />
</Fragment>
`;

exports[`it should display correct configuration for linechart 1`] = `
<Fragment>
  <PointMarkersConfig
    configuration={
      Object {
        "color": "#1991c8",
        "hideAbsoluteValue": false,
        "hideRelativeValue": false,
        "pointMarkers": true,
        "showInstanceCount": false,
        "targetValue": null,
        "xLabel": "",
        "yLabel": "",
      }
    }
  />
  <SharedChartConfig
    configuration={
      Object {
        "color": "#1991c8",
        "hideAbsoluteValue": false,
        "hideRelativeValue": false,
        "pointMarkers": true,
        "showInstanceCount": false,
        "targetValue": null,
        "xLabel": "",
        "yLabel": "",
      }
    }
    hideTooltipOptions={false}
    report={
      Object {
        "data": Object {
          "reportIds": Array [
            "test1",
          ],
        },
        "result": Object {
          "test1": Object {
            "data": Object {
              "view": Object {
                "property": "frequency",
              },
              "visualization": "line",
            },
          },
        },
      }
    }
  />
</Fragment>
`;

exports[`it should display correct configuration for number report 1`] = `
<Fragment>
  <SharedChartConfig
    configuration={
      Object {
        "color": "#1991c8",
        "hideAbsoluteValue": false,
        "hideRelativeValue": false,
        "pointMarkers": true,
        "showInstanceCount": false,
        "targetValue": null,
        "xLabel": "",
        "yLabel": "",
      }
    }
    hideTooltipOptions={true}
    report={
      Object {
        "data": Object {
          "reportIds": Array [
            "test1",
          ],
        },
        "result": Object {
          "test1": Object {
            "data": Object {
              "view": Object {
                "property": "frequency",
              },
              "visualization": "number",
            },
          },
        },
      }
    }
  />
</Fragment>
`;

exports[`it should display correct configuration for table report 1`] = `
<Fragment>
  <RelativeAbsoluteSelection
    configuration={
      Object {
        "color": "#1991c8",
        "hideAbsoluteValue": false,
        "hideRelativeValue": false,
        "pointMarkers": true,
        "showInstanceCount": false,
        "targetValue": null,
        "xLabel": "",
        "yLabel": "",
      }
    }
  />
</Fragment>
`;
